<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">86区</string>
    <string name="user_admin">系统</string>
    <string name="title_home">86区城市管家</string>
    <string name="title_shequ">社区</string>
    <string name="title_center">个人中心</string>
    <string name="money">价格:</string>

    <!-- 业务类别 -->
    <string name="center">个人</string>
    <string name="home">首页</string>
    <string name="community">社区</string>
    <string name="business">百货</string>
    <string name="life">慢主张</string>
    <string name="activity">活动</string>
    <string name="cars">汽车</string>
    <string name="news">新闻</string>
    <string name="more">更多&#8230;</string>
    <string name="fresh_another_data">数据加载中&#8230;</string>
    <string name="fresh_more_data">加载更多数据</string>
    <string name="choice_page_editext_tips">请输入小区关键字</string>
    <string name="home_business_more">更多</string>
    <string name="home_hot_talk">聚焦南昌</string>
    <string name="app_no_data">暂无商家数据</string>
    <string name="home_dialog_net_verify">请检查网络连接</string>
    <string name="home_dialog_ok">确定</string>
    <string name="home_connection_server_error">连接不上服务器,请稍后再试.</string>

    <!-- user info -->
    <string name="user_login">登录注册</string>
    <string name="user_shequ">所在社区：</string>
    <string name="user_message">我的信箱</string>
    <string name="user_feedback">意见反馈</string>
    <string name="user_about_us">关于我们</string>
    <string name="user_no_group">暂无小区</string>
    <string name="user_shequ_change">更改</string>
    <string name="user_clear_master">清除缓存</string>
    <string name="user_clearing">正在清除&#8230;请稍等</string>
    <string name="user_drop_out">退出登录</string>
    <string name="user_login_first">请先登入</string>

    <!-- 登录页面 -->
    <string name="login_title">登录86区</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_new">新用户注册</string>
    <string name="login_loading">登入验证,请稍等&#8230;</string>
    <string name="login_error_username_none">用户名不存在</string>
    <string name="login_error_password_wrong">密码错误</string>
    <string name="login_error_input">非法输入</string>
    <string name="login_error_net">请检查网络连接</string>
    <string name="login_error_none">囧&#8230;注册失败</string>

    <!-- 意见反馈 -->
    <string name="feedback_content">您宝贵的意见：</string>
    <string name="feedback_content_hint">输入内容</string>
    <string name="feedback_contact">联系方式 (必填)：</string>
    <string name="feedback_contact_hint">请留下您的联系电话、Email或QQ</string>
    <string name="feedback_submit">确认</string>

    <!-- 注册页面 -->
    <string name="register">注册</string>
    <string name="register_confirmation">验证通过！</string>
    <string name="register_account">请填写您的账号</string>
    <string name="register_already">该账号已注册！</string>
    <string name="register_email">请填写您的邮箱</string>
    <string name="register_email_wrong">邮箱地址格式不对！</string>
    <string name="register_email_register">该邮箱已注册！</string>
    <string name="register_password">请设置您的密码</string>
    <string name="register_repassword">请重复输入密码</string>
    <string name="register_password_not_same">两次输入的内容不一致！</string>
    <string name="register_password_tips">*密码6~12位,由数字、字母组成</string>
    <string name="register_agreement_gray">点击注册表示同意</string>
    <string name="register_agreement_blue">《86区&#8212;城市社区生活服务平台软件许可及服务协议》</string>

    <!-- 关于界面 -->
    <string name="about_content">&#160;&#160;&#160;&#160;南昌86区网-城市社区生活服务平台(www.86qu.cn/www.86qu.com)是江西弘奋实业有限公司旗下专注城市社区服务，为居民和商户搭建的在线交流互通的社交网络。\n&#160;&#160;&#160;&#160;86区成立于2014年8月6日。是江西省内首家城市社区生活服务平台。\n&#160;&#160;&#160;&#160;网站提供社区便民服务、社交活动和生活百货等生活服务，同时提供旅游、汽车、金融、餐饮、文化等栏目，为社区生活提供全方位服务。\n&#160;&#160;&#160;&#160;2015年86区将会在6月份启动九江站，并陆续开通省内其他站点。实现省内资讯零距离互通。</string>
    <string name="about_author">作&#160;&#160;者:</string>
    <string name="about_author_c">南昌86区网</string>
    <string name="about_email">邮&#160;&#160;箱:</string>
    <string name="about_email_c">1790286208@qq.com</string>
    <string name="about_version_check">检查更新</string>

    <!-- 二手市場 -->
    <string name="second_hand_time">半年前</string>
    <string name="second_hand_good_img">商品图片</string>
    <string name="second_hand_summary">简介</string>
    <string name="second_hand_location">地点</string>
    <string name="second_hand_detail_time">发布时间:</string>
    <string name="second_hand_release">我要卖闲置</string>
    <string name="second_hand_summary_title_transfer">转让</string>
    <string name="second_hand_summary_title_buy">求购</string>
    <string name="second_hand_summary_title_give">免费赠送</string>
    <string name="second_hand_summary_title_exchange">物品交换</string>
    <string name="second_hand_price">一口价：</string>

    <!-- 二手市场发布 -->
    <string name="release_title">我要卖闲置</string>
    <string name="release_text">发&#160;&#160;布</string>
    <string name="release_summary_title">标&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;题</string>
    <string name="release_summary_title_hint">输入一个标题</string>
    <string name="release_goods_description">物品描述</string>
    <string name="release_goods_description_hint">输入物品介绍</string>
    <string name="release_goods_images">物品图片</string>
    <string name="release_goods_old_price">原&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;价</string>
    <string name="release_goods_new_price">价&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;格</string>
    <string name="release_goods_cate">分&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;类</string>
    <string name="release_menu_camera">从拍照选取</string>
    <string name="release_menu_albums">从相册选取</string>
    <string name="release_dialog_text">发布宝贝信息,请稍等&#8230;</string>

</resources>