<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eye_city_gray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/feedback_message_layout_height"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/feedback_text_margin_left"
            android:layout_marginTop="@dimen/feedback_text_margin_top"
            android:text="@string/feedback_content"
            android:textSize="@dimen/feedback_text_size" />

        <EditText
            android:id="@+id/feedback_content_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/feedback_text_margin_left"
            android:layout_marginTop="@dimen/feedback_message_margin"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/feedback_content_hint"
            android:textSize="@dimen/feedback_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/feedback_contract_layout_height"
        android:layout_marginTop="@dimen/feedback_layout_margin"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/feedback_text_margin_left"
            android:layout_marginTop="@dimen/feedback_text_margin_top"
            android:text="@string/feedback_contact"
            android:textSize="@dimen/feedback_text_size" />

        <EditText
            android:id="@+id/feedback_contact_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/feedback_text_margin_top"
            android:background="@null"
            android:hint="@string/feedback_contact_hint"
            android:singleLine="true"
            android:textSize="@dimen/feedback_text_size" />
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/feedback_button_width"
        android:layout_height="@dimen/feedback_button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/feedback_button_margin"
        android:background="@drawable/login_button"
        android:text="@string/feedback_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/feedback_button_textsize" />

</LinearLayout>