<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eye_city_gray"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/register_user"
        android:layout_width="@dimen/register_view_width"
        android:layout_height="@dimen/register_view_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/register_margintop"
        android:background="@drawable/login_edittext_background"
        android:hint="@string/register_account"
        android:paddingLeft="@dimen/register_edit_marginLeft"
        android:singleLine="true"
        android:textSize="@dimen/register_edit_textsize" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="@dimen/register_view_width"
        android:layout_height="@dimen/register_view_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/register_edit_margin_top"
        android:background="@drawable/login_edittext_background"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/register_edit_marginLeft"
        android:singleLine="true"
        android:textSize="@dimen/register_edit_textsize" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="@dimen/register_view_width"
        android:layout_height="@dimen/register_view_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/register_edit_margin_top"
        android:background="@drawable/login_edittext_background"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/register_edit_marginLeft"
        android:singleLine="true"
        android:textSize="@dimen/register_edit_textsize" />

    <TextView
        android:layout_width="@dimen/register_view_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/register_edit_margin_top"
        android:singleLine="true"
        android:text="@string/register_password_tips"
        android:textColor="@color/red"
        android:textSize="@dimen/register_text_textsize" />

    <EditText
        android:id="@+id/register_repeat_password"
        android:layout_width="@dimen/register_view_width"
        android:layout_height="@dimen/register_view_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/register_edit_margin_top"
        android:background="@drawable/login_edittext_background"
        android:hint="@string/register_repassword"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/register_edit_marginLeft"
        android:singleLine="true"
        android:textSize="@dimen/register_edit_textsize" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="@dimen/register_view_width"
        android:layout_height="@dimen/register_view_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/register_button_margintop"
        android:background="@drawable/login_button"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/register_button_textsize" />

    <TextView
        android:id="@+id/register_agreement"
        android:layout_width="@dimen/register_view_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/register_button_margintop"
        android:textSize="@dimen/register_text_textsize" />

</LinearLayout>